# discord-bot-python-runner

./: docker-compose.yml
bot/: Dockerfile  main.py  pyproject.toml
